k8s/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: snk0202/devenvs-web:v0.2
        ports:
        - containerPort: 3000
