k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: default
spec:
  selector:
    app: nextjs
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
